@@ -1,5 +1,5 @@
 #############################################################################
-BETA PUBLIC RELEASE VERSION 1.4.0       3-20-09
+BETA PUBLIC RELEASE VERSION 1.4.0       3-31-09
 #############################################################################
  - NEW FEATURES
   * Updated html/master-index.html, deleted html/index.php.
@@ -49,6 +49,7 @@ BETA PUBLIC RELEASE VERSION 1.4.0       3-20-09
   * Applied Robert's patch in psize.py.
   * Made whitespace option available for both command line and web server 
     versions.
+  * Updated inputgen_pKa.py with the latest version.
 
  -BUG FIXES
   * Fixed a legacy bug with the web server (web server doesn't like ligand 
